Standardised HTML rendering of container and atom properties section